# go-gin-templ

./: .env.exameple  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  bazel-bin  bazel-let-go  bazel-out  bazel-testlogs  go.mod  go.sum  main.go
controller/: BUILD.bazel  link.go  user.go
entity/: BUILD.bazel  link.go  user.go
hello/: hello.go
loop/: loop.go
model/: BUILD.bazel  link.go  user.go
prisma/: schema.prisma
prisma/db/: BUILD.bazel
repository/: BUILD.bazel  link.go  user.go
service/database/: BUILD.bazel  prisma.go
variables/: variables.go
