load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "let-go_lib",
    srcs = ["main.go"],
    importpath = "github.com/fevunge/let-go",
    visibility = ["//visibility:private"],
    deps = [
        "//controller",
        "@com_github_labstack_echo_v4//:go_default_library",
    ],
)

go_binary(
    name = "let-go",
    embed = [":let-go_lib"],
    visibility = ["//visibility:public"],
)
