load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = ["user.go"],
    importpath = "github.com/fevunge/let-go/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//model",
        "@com_github_labstack_echo_v4//:go_default_library",
    ],
)
