load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = [
        "link.go",
        "user.go",
    ],
    importpath = "github.com/fevunge/let-go/model",
    visibility = ["//visibility:public"],
    deps = [
        "//entity",
        "//repository",
        "@com_github_labstack_gommon//log:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
