load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db_gen.go",
        "query-engine-debian-openssl-3.0.x_gen.go",
    ],
    importpath = "github.com/fevunge/let-go/prisma/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_shopspring_decimal//:go_default_library",
        "@com_github_steebchen_prisma_client_go//engine:go_default_library",
        "@com_github_steebchen_prisma_client_go//engine/mock:go_default_library",
        "@com_github_steebchen_prisma_client_go//runtime/builder:go_default_library",
        "@com_github_steebchen_prisma_client_go//runtime/lifecycle:go_default_library",
        "@com_github_steebchen_prisma_client_go//runtime/raw:go_default_library",
        "@com_github_steebchen_prisma_client_go//runtime/transaction:go_default_library",
        "@com_github_steebchen_prisma_client_go//runtime/types:go_default_library",
        "@com_github_steebchen_prisma_client_go//runtime/types/raw:go_default_library",
    ] + select({
        "@rules_go//go/platform:android_386": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:android_amd64": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:android_arm": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_386": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_amd64": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_arm": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_mips": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_mips64": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_mips64le": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_mipsle": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_ppc64": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_ppc64le": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_riscv64": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "@rules_go//go/platform:linux_s390x": [
            "@com_github_steebchen_prisma_client_go//binaries/unpack:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
